variables.RunFour.scala.code
var nbBiscuit = 0

while(nbBiscuit !=4){
  avance()
  if(estSurBiscuit)){
    nbBiscuit = nbBiscuit +1
  }
}